[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Pick/flowers-sheet.png" type="Texture" id=1]
[ext_resource path="res://Games/Travel/Flower.gd" type="Script" id=2]

[node name="Flower" type="Area2D"]
script = ExtResource( 2 )

[node name="flowers" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4
frame = 10

[node name="Flower0" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -503.245, -288.174 )
polygon = PoolVector2Array( 456.786, 246.176, 476.387, 236.111, 496.516, 241.409, 509.23, 237.171, 538.895, 246.706, 541.014, 257.83, 537.835, 265.246, 549.49, 284.317, 549.49, 297.03, 530.949, 315.571, 518.235, 316.101, 506.052, 323.517, 491.749, 324.576, 466.322, 312.393, 465.792, 303.387, 458.905, 307.095, 433.478, 298.62, 430.3, 287.495, 434.008, 273.722, 446.192, 266.836 )
disabled = true

[node name="Flower2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -499.007, -282.877 )
polygon = PoolVector2Array( 432.419, 275.311, 448.841, 267.895, 452.019, 259.419, 485.392, 250.944, 494.927, 244.587, 519.825, 241.409, 534.657, 246.176, 548.96, 258.36, 551.608, 272.663, 561.144, 291.733, 560.614, 304.447, 547.9, 318.22, 541.544, 326.695, 518.235, 336.23, 493.868, 333.052, 471.089, 331.463, 461.554, 323.517, 455.727, 322.457, 439.305, 308.155, 437.716, 297.56, 431.359, 289.084 )
disabled = true

[node name="Flower4" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -501.126, -289.233 )
polygon = PoolVector2Array( 480.095, 322.457, 453.608, 285.376, 452.019, 265.246, 462.084, 257.3, 475.327, 261.009, 490.16, 248.295, 497.576, 249.884, 507.111, 261.009, 526.711, 257.3, 534.657, 262.598, 542.073, 267.895, 543.133, 280.609, 548.43, 277.43, 552.668, 288.025, 548.43, 310.274, 538.895, 317.69, 509.76, 328.284 )
disabled = true

[node name="Flower6" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -497.948, -286.055 )
polygon = PoolVector2Array( 500.224, 328.284, 479.565, 322.987, 463.673, 307.095, 452.549, 285.906, 452.019, 264.717, 462.614, 260.479, 467.381, 245.117, 477.446, 251.473, 485.392, 245.117, 503.403, 242.468, 524.592, 252.533, 530.419, 250.414, 535.187, 253.063, 535.187, 264.717, 544.722, 259.949, 547.371, 266.836, 547.371, 284.846, 536.776, 305.506 )
disabled = true

[node name="Flower8" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -500.067, -287.114 )
polygon = PoolVector2Array( 422.884, 302.857, 440.895, 286.436, 428.181, 267.895, 436.657, 263.657, 432.419, 240.349, 453.078, 245.117, 453.608, 229.225, 474.797, 233.463, 480.624, 224.987, 488.041, 227.106, 493.868, 219.69, 504.462, 223.398, 511.349, 231.873, 521.943, 224.987, 530.949, 235.052, 543.662, 231.873, 546.311, 232.933, 545.781, 248.295, 569.09, 245.646, 569.619, 253.592, 568.03, 266.306, 559.554, 273.192, 571.208, 276.901, 581.803, 285.376, 577.036, 290.674, 563.792, 295.971, 570.149, 302.328, 572.268, 308.684, 563.263, 314.511, 554.787, 314.511, 555.846, 328.284, 543.133, 330.933, 539.954, 350.003, 528.83, 348.414, 510.289, 337.82, 499.695, 338.349, 486.451, 350.533, 480.095, 352.122, 471.089, 329.344, 449.37, 329.344, 440.365, 325.106, 443.543, 312.393 )
disabled = true

[node name="Flower10" type="CollisionPolygon2D" parent="."]
position = Vector2( -497.948, -286.055 )
polygon = PoolVector2Array( 437.186, 279.019, 460.495, 265.246, 449.37, 238.76, 476.916, 242.468, 474.797, 220.219, 480.624, 220.219, 489.63, 221.808, 505.522, 232.403, 513.997, 221.279, 517.176, 222.338, 527.241, 236.111, 544.722, 222.338, 548.96, 228.165, 547.371, 244.587, 571.738, 238.23, 572.798, 249.354, 563.792, 270.544, 557.965, 275.841, 569.619, 282.198, 568.03, 286.436, 553.198, 298.09, 562.733, 307.095, 563.792, 325.636, 554.787, 327.225, 541.014, 324.576, 541.014, 333.582, 521.943, 331.993, 509.23, 339.409, 504.462, 331.993, 491.219, 339.939, 480.624, 329.344, 463.673, 331.463, 463.673, 318.22, 445.132, 313.452, 444.603, 306.036, 453.608, 293.852 )
disabled = true
[connection signal="input_event" from="." to="." method="_on_Flower_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Flower_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Flower_mouse_exited"]
